--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "soteen-productoins",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://MartinUzunuv.github.io/SoteenProductionsWebsite",
+  "homepage": "https://soteen.productions",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
